# model-serving-utils

./: .env.example  .gitignore  README.md  deploy-model-registry.sh  deploy-model.sh  undeploy-model-registry.sh  undeploy-model.sh
components/register_model/: README.md  build.sh  compile-upsert-pipeline.sh  model-registries.yaml  push.sh  pyproject.toml  register_model_component.py  register_model_component.yaml  requirements.txt  run.sh
components/register_model/rbac/: rbac.yaml
components/register_model/src/: kfp_config.ini  register_model.py  runtime-requirements.txt  utils.py
components/register_model/src/component_metadata/: register_model.yaml
examples/model-car/: Containerfile  README.md  authorino-example.txt  build.sh  download_model.py  push.sh
examples/model-registry/: README.md  python-example-usage.ipynb
gitops/embeddings/: README.md  values.yaml
gitops/embeddings/templates/: model-instance.yaml  setup-jobs.yaml
gitops/model/: README.md  run.sh  values.yaml
gitops/model-registry/: Chart.yaml  README.md  run.sh  values.yaml
gitops/model-registry/templates/: _helpers.tpl  model-registry-db-parameters.yaml  model-registry-secret.yaml  model-registry.yaml  mysql-deployment.yaml  mysql-pvc.yaml  mysql-secret.yaml  mysql-service.yaml  rolebinding.yaml
gitops/model/templates/: model-instance.yaml  model-s3-connection.yaml  setup-jobs.yaml
