[project]
name = "register-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.54",
    "botocore==1.35.54",
    "kfp[kubernetes]==2.8.0",
    "kubernetes==23.6.0",
    "load-dotenv==0.1.0",
    "model-registry==0.2.13",
]
